--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -7,38 +7,34 @@ eureka.client.serviceUrl.defaultZone  = http://localhost:8081/eureka/
 spring.main.web-application-type=NONE 
 spring.cloud.gateway.discovery.locator.enabled=true
 
-# spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
-# spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,OPTIONS
-# spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowCredentials=true
-
 spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping: true
 
 #product-microservice
 spring.cloud.gateway.routes[0].id=product-product-microservice
 spring.cloud.gateway.routes[0].uri=http://localhost:9090/api/products/
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**
-spring.cloud.gateway.routes[0].filters[0]=AuthFilter
+# spring.cloud.gateway.routes[0].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[1].id=category-product-microservice
 spring.cloud.gateway.routes[1].uri=http://localhost:9090/api/categories/
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/categories/**
-spring.cloud.gateway.routes[1].filters[0]=AuthFilter
+# spring.cloud.gateway.routes[1].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[2].id=review-product-microservice
 spring.cloud.gateway.routes[2].uri=http://localhost:9090/api/reviews/
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/reviews/**
-spring.cloud.gateway.routes[2].filters[0]=AuthFilter
+# spring.cloud.gateway.routes[2].filters[0]=AuthFilter
 
 #order-microservice
 spring.cloud.gateway.routes[3].id=order-order-microservice
 spring.cloud.gateway.routes[3].uri=http://localhost:9091/api/orders/
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/orders/**
-spring.cloud.gateway.routes[3].filters[0]=AuthFilter
+# spring.cloud.gateway.routes[3].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[4].id=payment-order-microservice
 spring.cloud.gateway.routes[4].uri=http://localhost:9091/api/payments/
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/payments/**
-spring.cloud.gateway.routes[4].filters[0]=AuthFilter
+# spring.cloud.gateway.routes[4].filters[0]=AuthFilter
 
 # Auth JWT
 #user-microservice
@@ -51,3 +47,7 @@ spring.cloud.gateway.routes[6].id=user-auth-microservice
 spring.cloud.gateway.routes[6].uri=http://localhost:9092/api/users/
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api/users/**
 
+#company-microservice
+spring.cloud.gateway.routes[7].id=company-microservice
+spring.cloud.gateway.routes[7].uri=http://localhost:9093/api/companies/
+spring.cloud.gateway.routes[7].predicates[0]=Path=/api/companies/**
