--- a/config-data/company-microservice.properties
+++ b/config-data/company-microservice.properties
@@ -3,7 +3,7 @@ server.port= 9093
 #Configuración base de datos
 spring.datasource.url=jdbc:postgresql://localhost:5432/company_db
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
+spring.datasource.username=kruger
 spring.datasource.password=12345678
 spring.jpa.database=POSTGRESQL
 
