--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -36,18 +36,23 @@ spring.cloud.gateway.routes[4].uri=http://localhost:9091/api/payments/
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/payments/**
 # spring.cloud.gateway.routes[4].filters[0]=AuthFilter
 
-# Auth JWT
-#user-microservice
-spring.cloud.gateway.routes[5].id=cart-auth-microservice
-spring.cloud.gateway.routes[5].uri=http://localhost:9092/api/carts/
-spring.cloud.gateway.routes[5].predicates[0]=Path=/api/carts/**
+spring.cloud.gateway.routes[5].id=coupon-order-microservice
+spring.cloud.gateway.routes[5].uri=http://localhost:9091/api/coupons/
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/coupons/**
 # spring.cloud.gateway.routes[5].filters[0]=AuthFilter
 
-spring.cloud.gateway.routes[6].id=user-auth-microservice
-spring.cloud.gateway.routes[6].uri=http://localhost:9092/api/users/
-spring.cloud.gateway.routes[6].predicates[0]=Path=/api/users/**
+# Auth JWT
+#user-microservice
+spring.cloud.gateway.routes[6].id=cart-auth-microservice
+spring.cloud.gateway.routes[6].uri=http://localhost:9092/api/carts/
+spring.cloud.gateway.routes[6].predicates[0]=Path=/api/carts/**
+# spring.cloud.gateway.routes[6].filters[0]=AuthFilter
+
+spring.cloud.gateway.routes[7].id=user-auth-microservice
+spring.cloud.gateway.routes[7].uri=http://localhost:9092/api/users/
+spring.cloud.gateway.routes[7].predicates[0]=Path=/api/users/**
 
 #company-microservice
-spring.cloud.gateway.routes[7].id=company-microservice
-spring.cloud.gateway.routes[7].uri=http://localhost:9093/api/companies/
-spring.cloud.gateway.routes[7].predicates[0]=Path=/api/companies/**
+spring.cloud.gateway.routes[8].id=company-microservice
+spring.cloud.gateway.routes[8].uri=http://localhost:9093/api/companies/
+spring.cloud.gateway.routes[8].predicates[0]=Path=/api/companies/**
