address load balancer

--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -57,7 +57,11 @@ spring.cloud.gateway.routes[8].id=user-auth-microservice
 spring.cloud.gateway.routes[8].uri=http://localhost:9092/api/users/
 spring.cloud.gateway.routes[8].predicates[0]=Path=/api/users/**
 
+spring.cloud.gateway.routes[9].id=address-auth-microservice
+spring.cloud.gateway.routes[9].uri=http://localhost:9092/api/address/
+spring.cloud.gateway.routes[9].predicates[0]=Path=/api/address/**
+
 #company-microservice
-spring.cloud.gateway.routes[9].id=company-microservice
-spring.cloud.gateway.routes[9].uri=http://localhost:9093/api/companies/
-spring.cloud.gateway.routes[9].predicates[0]=Path=/api/companies/**
+spring.cloud.gateway.routes[10].id=company-microservice
+spring.cloud.gateway.routes[10].uri=http://localhost:9093/api/companies/
+spring.cloud.gateway.routes[10].predicates[0]=Path=/api/companies/**
