Resilience4j to products reviews and feign clients

--- a/product-microservice/build.gradle
+++ b/product-microservice/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	// Sleuth y Zipkin
 	// implementation group: 'org.springframework.cloud', name: 'spring-cloud-sleuth-zipkin', version: '3.1.5'
 	// implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth', version: '3.1.5'
+	//Para circuit breaker y conectar microservicios
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
