--- a/config-data/product-microservice.properties
+++ b/config-data/product-microservice.properties
@@ -20,3 +20,12 @@ eureka.client.serviceUrl.defaultZone  = http://localhost:8081/eureka/
 
 #Zipkin
 spring.application.zipkin: http://localhost:9411
+
+#Circuit breaker con feign y resilience4J
+spring.cloud.openfeign.circuitbreaker.enabled=true
+feign.circuitbreaker.enabled: true
+feign.circuitbreaker.alphanumeric-ids.enabled: true
+
+#Para servicio de auth
+resilience4j.circuitbreaker.instances.auth-microservice-cb.minimumNumberOfCalls=4
+resilience4j.timelimiter.instances.auth-microservice-cb.timeoutDuration=10s
