--- a/config-data/auth-microservice.properties
+++ b/config-data/auth-microservice.properties
@@ -26,6 +26,6 @@ spring.cloud.openfeign.circuitbreaker.enabled=true
 feign.circuitbreaker.enabled: true
 feign.circuitbreaker.alphanumeric-ids.enabled: true
 
-#Para servicio de auth
+#Para servicio de order
 resilience4j.circuitbreaker.instances.order-microservice-cb.minimumNumberOfCalls=4
 resilience4j.timelimiter.instances.order-microservice-cb.timeoutDuration=10s
