--- a/config-data/order-microservice.properties
+++ b/config-data/order-microservice.properties
@@ -32,5 +32,5 @@ resilience4j.circuitbreaker.instances.product-microservice-cb.minimumNumberOfCal
 resilience4j.timelimiter.instances.product-microservice-cb.timeoutDuration=10s
 
 # #Para servicio de customer
-resilience4j.circuitbreaker.instances.customer-microservice-cb.minimumNumberOfCalls=4
-resilience4j.timelimiter.instances.customer-microservice-cb.timeoutDuration=10s
+resilience4j.circuitbreaker.instances.auth-microservice-cb.minimumNumberOfCalls=4
+resilience4j.timelimiter.instances.auth-microservice-cb.timeoutDuration=10s
