--- a/config-data/auth-microservice.properties
+++ b/config-data/auth-microservice.properties
@@ -29,3 +29,11 @@ feign.circuitbreaker.alphanumeric-ids.enabled: true
 #Para servicio de order
 resilience4j.circuitbreaker.instances.order-microservice-cb.minimumNumberOfCalls=4
 resilience4j.timelimiter.instances.order-microservice-cb.timeoutDuration=10s
+
+#Para envío de correos electrónicos
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=krugercellmag@gmail.com
+spring.mail.password=vengacoders
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
