--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -61,7 +61,11 @@ spring.cloud.gateway.routes[9].id=address-auth-microservice
 spring.cloud.gateway.routes[9].uri=http://localhost:9092/api/address/
 spring.cloud.gateway.routes[9].predicates[0]=Path=/api/address/**
 
+spring.cloud.gateway.routes[10].id=mail-auth-microservice
+spring.cloud.gateway.routes[10].uri=http://localhost:9092/api/mails/
+spring.cloud.gateway.routes[10].predicates[0]=Path=/api/mails/**
+
 #company-microservice
-spring.cloud.gateway.routes[10].id=company-microservice
-spring.cloud.gateway.routes[10].uri=http://localhost:9093/api/companies/
-spring.cloud.gateway.routes[10].predicates[0]=Path=/api/companies/**
+spring.cloud.gateway.routes[11].id=company-microservice
+spring.cloud.gateway.routes[11].uri=http://localhost:9093/api/companies/
+spring.cloud.gateway.routes[11].predicates[0]=Path=/api/companies/**
