Feign client to product in user microservice

--- a/config-data/auth-microservice.properties
+++ b/config-data/auth-microservice.properties
@@ -30,6 +30,11 @@ feign.circuitbreaker.alphanumeric-ids.enabled: true
 resilience4j.circuitbreaker.instances.order-microservice-cb.minimumNumberOfCalls=4
 resilience4j.timelimiter.instances.order-microservice-cb.timeoutDuration=10s
 
+#Para servicio de product
+resilience4j.circuitbreaker.instances.product-microservice-cb.minimumNumberOfCalls=4
+resilience4j.timelimiter.instances.product-microservice-cb.timeoutDuration=10s
+
+
 #Para envío de correos electrónicos
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
