Swagger to load balancer

--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -13,22 +13,18 @@ spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping: true
 spring.cloud.gateway.routes[0].id=product-product-microservice
 spring.cloud.gateway.routes[0].uri=http://localhost:9090/api/products/
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**
-# spring.cloud.gateway.routes[0].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[1].id=category-product-microservice
 spring.cloud.gateway.routes[1].uri=http://localhost:9090/api/categories/
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/categories/**
-# spring.cloud.gateway.routes[1].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[2].id=review-product-microservice
 spring.cloud.gateway.routes[2].uri=http://localhost:9090/api/reviews/
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/reviews/**
-# spring.cloud.gateway.routes[2].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[3].id=image-product-microservice
 spring.cloud.gateway.routes[3].uri=http://localhost:9090/api/images/
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/images/**
-# spring.cloud.gateway.routes[3].filters[0]=AuthFilter
 
 #order-microservice
 spring.cloud.gateway.routes[4].id=order-order-microservice
@@ -69,3 +65,19 @@ spring.cloud.gateway.routes[10].predicates[0]=Path=/api/mails/**
 spring.cloud.gateway.routes[11].id=company-microservice
 spring.cloud.gateway.routes[11].uri=http://localhost:9093/api/companies/
 spring.cloud.gateway.routes[11].predicates[0]=Path=/api/companies/**
+
+#swagger
+#product
+spring.cloud.gateway.routes[12].id=product-microservice-swagger
+spring.cloud.gateway.routes[12].uri=http://localhost:9090/swagger-ui/index.html#/
+spring.cloud.gateway.routes[12].predicates[0]=Path=/swagger-ui/index.html#/**
+
+#order
+spring.cloud.gateway.routes[13].id=order-microservice-swagger
+spring.cloud.gateway.routes[13].uri=http://localhost:9091/swagger-ui/index.html#/
+spring.cloud.gateway.routes[13].predicates[0]=Path=/swagger-ui/index.html#/**
+
+#company
+spring.cloud.gateway.routes[14].id=company-microservice-swagger
+spring.cloud.gateway.routes[14].uri=http://localhost:9093/swagger-ui/index.html#/
+spring.cloud.gateway.routes[14].predicates[0]=Path=/swagger-ui/index.html#/**
