Swagger to load balancer

--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -70,14 +70,14 @@ spring.cloud.gateway.routes[11].predicates[0]=Path=/api/companies/**
 #product
 spring.cloud.gateway.routes[12].id=product-microservice-swagger
 spring.cloud.gateway.routes[12].uri=http://localhost:9090/swagger-ui/index.html#/
-spring.cloud.gateway.routes[12].predicates[0]=Path=/swagger-ui/index.html#/**
+spring.cloud.gateway.routes[12].predicates[0]=Path=/product/swagger-ui/index.html#/**
 
 #order
 spring.cloud.gateway.routes[13].id=order-microservice-swagger
 spring.cloud.gateway.routes[13].uri=http://localhost:9091/swagger-ui/index.html#/
-spring.cloud.gateway.routes[13].predicates[0]=Path=/swagger-ui/index.html#/**
+spring.cloud.gateway.routes[13].predicates[0]=Path=/order/swagger-ui/index.html#/**
 
 #company
 spring.cloud.gateway.routes[14].id=company-microservice-swagger
 spring.cloud.gateway.routes[14].uri=http://localhost:9093/swagger-ui/index.html#/
-spring.cloud.gateway.routes[14].predicates[0]=Path=/swagger-ui/index.html#/**
+spring.cloud.gateway.routes[14].predicates[0]=Path=/company/swagger-ui/index.html#/**
