--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -25,29 +25,30 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/reviews/**
 spring.cloud.gateway.routes[3].id=image-product-microservice
 spring.cloud.gateway.routes[3].uri=http://localhost:9090/api/images/
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/images/**
+spring.cloud.gateway.routes[7].filters[0]=AuthFilter
 
 #order-microservice
 spring.cloud.gateway.routes[4].id=order-order-microservice
 spring.cloud.gateway.routes[4].uri=http://localhost:9091/api/orders/
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/orders/**
-# spring.cloud.gateway.routes[4].filters[0]=AuthFilter
+spring.cloud.gateway.routes[4].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[5].id=payment-order-microservice
 spring.cloud.gateway.routes[5].uri=http://localhost:9091/api/payments/
 spring.cloud.gateway.routes[5].predicates[0]=Path=/api/payments/**
-# spring.cloud.gateway.routes[5].filters[0]=AuthFilter
+spring.cloud.gateway.routes[5].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[6].id=coupon-order-microservice
 spring.cloud.gateway.routes[6].uri=http://localhost:9091/api/coupons/
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api/coupons/**
-# spring.cloud.gateway.routes[6].filters[0]=AuthFilter
+spring.cloud.gateway.routes[6].filters[0]=AuthFilter
 
 # Auth JWT
 #user-microservice
 spring.cloud.gateway.routes[7].id=cart-auth-microservice
 spring.cloud.gateway.routes[7].uri=http://localhost:9092/api/carts/
 spring.cloud.gateway.routes[7].predicates[0]=Path=/api/carts/**
-# spring.cloud.gateway.routes[7].filters[0]=AuthFilter
+spring.cloud.gateway.routes[7].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[8].id=user-auth-microservice
 spring.cloud.gateway.routes[8].uri=http://localhost:9092/api/users/
@@ -56,6 +57,7 @@ spring.cloud.gateway.routes[8].predicates[0]=Path=/api/users/**
 spring.cloud.gateway.routes[9].id=address-auth-microservice
 spring.cloud.gateway.routes[9].uri=http://localhost:9092/api/address/
 spring.cloud.gateway.routes[9].predicates[0]=Path=/api/address/**
+spring.cloud.gateway.routes[7].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[10].id=mail-auth-microservice
 spring.cloud.gateway.routes[10].uri=http://localhost:9092/api/mails/
@@ -65,6 +67,8 @@ spring.cloud.gateway.routes[10].predicates[0]=Path=/api/mails/**
 spring.cloud.gateway.routes[11].id=company-microservice
 spring.cloud.gateway.routes[11].uri=http://localhost:9093/api/companies/
 spring.cloud.gateway.routes[11].predicates[0]=Path=/api/companies/**
+spring.cloud.gateway.routes[7].filters[0]=AuthFilter
+
 
 # #swagger
 # #product
