Eureka to load balancer

--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -25,7 +25,7 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/reviews/**
 spring.cloud.gateway.routes[3].id=image-product-microservice
 spring.cloud.gateway.routes[3].uri=http://localhost:9090/api/images/
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/images/**
-spring.cloud.gateway.routes[7].filters[0]=AuthFilter
+spring.cloud.gateway.routes[3].filters[0]=AuthFilter
 
 #order-microservice
 spring.cloud.gateway.routes[4].id=order-order-microservice
@@ -57,7 +57,7 @@ spring.cloud.gateway.routes[8].predicates[0]=Path=/api/users/**
 spring.cloud.gateway.routes[9].id=address-auth-microservice
 spring.cloud.gateway.routes[9].uri=http://localhost:9092/api/address/
 spring.cloud.gateway.routes[9].predicates[0]=Path=/api/address/**
-spring.cloud.gateway.routes[7].filters[0]=AuthFilter
+spring.cloud.gateway.routes[9].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[10].id=mail-auth-microservice
 spring.cloud.gateway.routes[10].uri=http://localhost:9092/api/mails/
@@ -67,7 +67,12 @@ spring.cloud.gateway.routes[10].predicates[0]=Path=/api/mails/**
 spring.cloud.gateway.routes[11].id=company-microservice
 spring.cloud.gateway.routes[11].uri=http://localhost:9093/api/companies/
 spring.cloud.gateway.routes[11].predicates[0]=Path=/api/companies/**
-spring.cloud.gateway.routes[7].filters[0]=AuthFilter
+spring.cloud.gateway.routes[11].filters[0]=AuthFilter
+
+#registry-microservice
+spring.cloud.gateway.routes[12].id=registry-microservice
+spring.cloud.gateway.routes[12].uri=http://localhost:8081/
+spring.cloud.gateway.routes[12].predicates[0]=Path=/**
 
 
 # #swagger
