--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -57,7 +57,7 @@ spring.cloud.gateway.routes[8].predicates[0]=Path=/api/users/**
 spring.cloud.gateway.routes[9].id=address-auth-microservice
 spring.cloud.gateway.routes[9].uri=http://localhost:9092/api/address/
 spring.cloud.gateway.routes[9].predicates[0]=Path=/api/address/**
-spring.cloud.gateway.routes[9].filters[0]=AuthFilter
+# spring.cloud.gateway.routes[9].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[10].id=mail-auth-microservice
 spring.cloud.gateway.routes[10].uri=http://localhost:9092/api/mails/
@@ -67,7 +67,7 @@ spring.cloud.gateway.routes[10].predicates[0]=Path=/api/mails/**
 spring.cloud.gateway.routes[11].id=company-microservice
 spring.cloud.gateway.routes[11].uri=http://localhost:9093/api/companies/
 spring.cloud.gateway.routes[11].predicates[0]=Path=/api/companies/**
-spring.cloud.gateway.routes[11].filters[0]=AuthFilter
+# spring.cloud.gateway.routes[11].filters[0]=AuthFilter
 
 
 # #swagger
