Testing token microservices

--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -67,7 +67,7 @@ spring.cloud.gateway.routes[10].predicates[0]=Path=/api/mails/**
 spring.cloud.gateway.routes[11].id=company-microservice
 spring.cloud.gateway.routes[11].uri=http://localhost:9093/api/companies/
 spring.cloud.gateway.routes[11].predicates[0]=Path=/api/companies/**
-# spring.cloud.gateway.routes[11].filters[0]=AuthFilter
+spring.cloud.gateway.routes[11].filters[0]=AuthFilter
 
 
 # #swagger
