Testing token microservices

--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -48,7 +48,7 @@ spring.cloud.gateway.routes[6].predicates[0]=Path=/api/coupons/**
 spring.cloud.gateway.routes[7].id=cart-auth-microservice
 spring.cloud.gateway.routes[7].uri=http://localhost:9092/api/carts/
 spring.cloud.gateway.routes[7].predicates[0]=Path=/api/carts/**
-# spring.cloud.gateway.routes[7].filters[0]=AuthFilter
+spring.cloud.gateway.routes[7].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[8].id=user-auth-microservice
 spring.cloud.gateway.routes[8].uri=http://localhost:9092/api/users/
@@ -57,7 +57,7 @@ spring.cloud.gateway.routes[8].predicates[0]=Path=/api/users/**
 spring.cloud.gateway.routes[9].id=address-auth-microservice
 spring.cloud.gateway.routes[9].uri=http://localhost:9092/api/address/
 spring.cloud.gateway.routes[9].predicates[0]=Path=/api/address/**
-# spring.cloud.gateway.routes[9].filters[0]=AuthFilter
+spring.cloud.gateway.routes[9].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[10].id=mail-auth-microservice
 spring.cloud.gateway.routes[10].uri=http://localhost:9092/api/mails/
