Testing token microservices

--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -13,6 +13,7 @@ spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping: true
 spring.cloud.gateway.routes[0].id=product-product-microservice
 spring.cloud.gateway.routes[0].uri=http://localhost:9090/api/products/
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**
+spring.cloud.gateway.routes[3].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[1].id=category-product-microservice
 spring.cloud.gateway.routes[1].uri=http://localhost:9090/api/categories/
@@ -48,7 +49,7 @@ spring.cloud.gateway.routes[6].predicates[0]=Path=/api/coupons/**
 spring.cloud.gateway.routes[7].id=cart-auth-microservice
 spring.cloud.gateway.routes[7].uri=http://localhost:9092/api/carts/
 spring.cloud.gateway.routes[7].predicates[0]=Path=/api/carts/**
-spring.cloud.gateway.routes[7].filters[0]=AuthFilter
+# spring.cloud.gateway.routes[7].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[8].id=user-auth-microservice
 spring.cloud.gateway.routes[8].uri=http://localhost:9092/api/users/
@@ -57,7 +58,7 @@ spring.cloud.gateway.routes[8].predicates[0]=Path=/api/users/**
 spring.cloud.gateway.routes[9].id=address-auth-microservice
 spring.cloud.gateway.routes[9].uri=http://localhost:9092/api/address/
 spring.cloud.gateway.routes[9].predicates[0]=Path=/api/address/**
-spring.cloud.gateway.routes[9].filters[0]=AuthFilter
+# spring.cloud.gateway.routes[9].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[10].id=mail-auth-microservice
 spring.cloud.gateway.routes[10].uri=http://localhost:9092/api/mails/
@@ -67,7 +68,7 @@ spring.cloud.gateway.routes[10].predicates[0]=Path=/api/mails/**
 spring.cloud.gateway.routes[11].id=company-microservice
 spring.cloud.gateway.routes[11].uri=http://localhost:9093/api/companies/
 spring.cloud.gateway.routes[11].predicates[0]=Path=/api/companies/**
-spring.cloud.gateway.routes[11].filters[0]=AuthFilter
+# spring.cloud.gateway.routes[11].filters[0]=AuthFilter
 
 
 # #swagger
