Test no token on orders to  create coupon to new order

--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -30,7 +30,7 @@ spring.cloud.gateway.routes[3].predicates[0]=Path=/api/images/**
 spring.cloud.gateway.routes[4].id=order-order-microservice
 spring.cloud.gateway.routes[4].uri=http://localhost:9091/api/orders/
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/orders/**
-spring.cloud.gateway.routes[4].filters[0]=AuthFilter
+# spring.cloud.gateway.routes[4].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[5].id=payment-order-microservice
 spring.cloud.gateway.routes[5].uri=http://localhost:9091/api/payments/
