--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -3,6 +3,10 @@ server.port=8082
 #Eureka
 eureka.client.serviceUrl.defaultZone  = http://localhost:8081/eureka/
 
+#Load balancer Ribbon
+product-microservice.ribbon.ReadTimeout=5000
+product-microservice.ribbon.ConnectTimeout=5000
+
 #Gateway
 spring.main.web-application-type=NONE 
 spring.cloud.gateway.discovery.locator.enabled=true
