--- a/gateway-microservice/build.gradle
+++ b/gateway-microservice/build.gradle
@@ -20,6 +20,7 @@ ext {
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+	implementation group: 'com.netflix.ribbon', name: 'ribbon-loadbalancer', version: '2.7.18'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation group: 'org.springframework.security', name: 'spring-security-web'
