--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -10,7 +10,9 @@ product-microservice.ribbon.ConnectTimeout=5000
 #Gateway
 spring.main.web-application-type=NONE 
 spring.cloud.gateway.discovery.locator.enabled=true
-
+spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
+spring.cloud.gateway.discovery.locator.strip-instance-id=true
+spring.cloud.gateway.discovery.locator.eureka.enabled=true
 spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping: true
 
 #product-microservice
