--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -3,21 +3,15 @@ server.port=8082
 #Eureka
 eureka.client.serviceUrl.defaultZone  = http://localhost:8081/eureka/
 
-#Load balancer Ribbon
-product-microservice.ribbon.ReadTimeout=5000
-product-microservice.ribbon.ConnectTimeout=5000
-
 #Gateway
 spring.main.web-application-type=NONE 
 spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
-spring.cloud.gateway.discovery.locator.strip-instance-id=true
-spring.cloud.gateway.discovery.locator.eureka.enabled=true
+
 spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping: true
 
 #product-microservice
 spring.cloud.gateway.routes[0].id=product-product-microservice
-spring.cloud.gateway.routes[0].uri=http://PRODUCT-MICROSERVICE/api/products/
+spring.cloud.gateway.routes[0].uri=http://localhost:9090/api/products/
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**
 
 spring.cloud.gateway.routes[1].id=category-product-microservice
