Testeando mientras subo cmabios

--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -15,7 +15,7 @@ spring.cloud.gateway.routes[0].uri=lb://product-microservice
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**
 
 spring.cloud.gateway.routes[1].id=category-product-microservice
-spring.cloud.gateway.routes[1].uri=http://localhost:9090/api/categories/
+spring.cloud.gateway.routes[1].uri=lb://product-microservice
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/categories/**
 
 spring.cloud.gateway.routes[2].id=review-product-microservice
