--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -19,11 +19,11 @@ spring.cloud.gateway.routes[1].uri=lb://product-microservice
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/categories/**
 
 spring.cloud.gateway.routes[2].id=review-product-microservice
-spring.cloud.gateway.routes[2].uri=http://localhost:9090/api/reviews/
+spring.cloud.gateway.routes[2].uri=lb://product-microservice
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/reviews/**
 
 spring.cloud.gateway.routes[3].id=image-product-microservice
-spring.cloud.gateway.routes[3].uri=http://localhost:9090/api/images/
+spring.cloud.gateway.routes[3].uri=lb://product-microservice
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/images/**
 
 #order-microservice
