--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -28,45 +28,52 @@ spring.cloud.gateway.routes[3].predicates[0]=Path=/api/images/**
 
 #order-microservice
 spring.cloud.gateway.routes[4].id=order-order-microservice
-spring.cloud.gateway.routes[4].uri=http://localhost:9091/api/orders/
+spring.cloud.gateway.routes[4].uri=lb://order-microservice
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/orders/**
-# spring.cloud.gateway.routes[4].filters[0]=AuthFilter
+spring.cloud.gateway.routes[4].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[5].id=payment-order-microservice
-spring.cloud.gateway.routes[5].uri=http://localhost:9091/api/payments/
+spring.cloud.gateway.routes[5].uri=lb://order-microservice
 spring.cloud.gateway.routes[5].predicates[0]=Path=/api/payments/**
 spring.cloud.gateway.routes[5].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[6].id=coupon-order-microservice
-spring.cloud.gateway.routes[6].uri=http://localhost:9091/api/coupons/
+spring.cloud.gateway.routes[6].uri=lb://order-microservice
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api/coupons/**
 spring.cloud.gateway.routes[6].filters[0]=AuthFilter
 
 # Auth JWT
 #user-microservice
 spring.cloud.gateway.routes[7].id=cart-auth-microservice
-spring.cloud.gateway.routes[7].uri=http://localhost:9092/api/carts/
+spring.cloud.gateway.routes[7].uri=lb://auth-microservice
 spring.cloud.gateway.routes[7].predicates[0]=Path=/api/carts/**
 spring.cloud.gateway.routes[7].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[8].id=user-auth-microservice
-spring.cloud.gateway.routes[8].uri=http://localhost:9092/api/users/
+spring.cloud.gateway.routes[8].uri=lb://auth-microservice
 spring.cloud.gateway.routes[8].predicates[0]=Path=/api/users/**
 
 spring.cloud.gateway.routes[9].id=address-auth-microservice
-spring.cloud.gateway.routes[9].uri=http://localhost:9092/api/address/
+spring.cloud.gateway.routes[9].uri=lb://auth-microservice
 spring.cloud.gateway.routes[9].predicates[0]=Path=/api/address/**
 spring.cloud.gateway.routes[9].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[10].id=mail-auth-microservice
-spring.cloud.gateway.routes[10].uri=http://localhost:9092/api/mails/
+spring.cloud.gateway.routes[10].uri=lb://auth-microservice
 spring.cloud.gateway.routes[10].predicates[0]=Path=/api/mails/**
 
 #company-microservice
 spring.cloud.gateway.routes[11].id=company-microservice
-spring.cloud.gateway.routes[11].uri=http://localhost:9093/api/companies/
+spring.cloud.gateway.routes[11].uri=lb://company-microservice
 spring.cloud.gateway.routes[11].predicates[0]=Path=/api/companies/**
 spring.cloud.gateway.routes[11].filters[0]=AuthFilter
+
+#EXCLUSIVO PARA LA DESCARGA DEL PDF
+
+spring.cloud.gateway.routes[12].id=cart-pdf-auth-microservice
+spring.cloud.gateway.routes[12].uri=http://localhost:9092/api/carts/
+spring.cloud.gateway.routes[12].predicates[0]=Path=/api/carts/**/report
+spring.cloud.gateway.routes[12].filters[0]=AuthFilter
 
 # #swagger
 # #product
