Report without lb

--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -72,7 +72,7 @@ spring.cloud.gateway.routes[11].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[12].id=cart-pdf-auth-microservice
 spring.cloud.gateway.routes[12].uri=http://localhost:9092/api/carts/
-spring.cloud.gateway.routes[12].predicates[0]=Path=/api/carts/**/report
+spring.cloud.gateway.routes[12].predicates[0]=Path=/api/carts/{num}/report, Where(num=\d+)
 spring.cloud.gateway.routes[12].filters[0]=AuthFilter
 
 # #swagger
