--- a/config-data/product-microservice.properties
+++ b/config-data/product-microservice.properties
@@ -1,7 +1,7 @@
 server.port= 9090
 
 #Configuración base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/product_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=kruger
 spring.datasource.password=12345678
@@ -16,10 +16,10 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 #Eureka
-eureka.client.serviceUrl.defaultZone  = http://localhost:8081/eureka/
+eureka.client.serviceUrl.defaultZone  = http://host.docker.internal:8081/eureka/
 
 #Zipkin
-spring.application.zipkin: http://localhost:9411
+# spring.application.zipkin: http://localhost:9411
 
 #Circuit breaker con feign y resilience4J
 spring.cloud.openfeign.circuitbreaker.enabled=true
