--- a/product-microservice/src/main/resources/bootstrap.yml
+++ b/product-microservice/src/main/resources/bootstrap.yml
@@ -3,6 +3,10 @@ spring:
         name: product-microservice
     cloud:
         config:
-            uri: http://localhost:8080
+            fail-fast: true
+            retry:
+                maxAttempts: 200
+                maxInterval: 10000
+            uri: http://host.docker.internal:8080
             username: root
             password: s3cr3t
