--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -1,7 +1,7 @@
 server.port=8082
 
 #Eureka
-eureka.client.serviceUrl.defaultZone  = http://localhost:8081/eureka/
+eureka.client.serviceUrl.defaultZone  = http://host.docker.internal:8081/eureka/
 
 #Gateway
 spring.main.web-application-type=NONE 
@@ -47,7 +47,7 @@ spring.cloud.gateway.routes[6].filters[0]=AuthFilter
 
 #EXCLUSIVO PARA LA DESCARGA DEL PDF SIN BALANCEADOR DE CARGA
 spring.cloud.gateway.routes[7].id=cart-pdf-auth-microservice
-spring.cloud.gateway.routes[7].uri=http://localhost:9092/api/carts/
+spring.cloud.gateway.routes[7].uri=http://host.docker.internal:9092/api/carts/
 spring.cloud.gateway.routes[7].predicates[0]=Path=/api/carts/{num}/report, Where(num=\d+)
 spring.cloud.gateway.routes[7].filters[0]=AuthFilter
 
