--- a/gateway-microservice/src/main/resources/bootstrap.yml
+++ b/gateway-microservice/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: gateway-microservice
   cloud:
     config:
-      uri: http://host.docker.internal:8080
+      uri: http://localhost:8080
       username: root
       password: s3cr3t
     gateway:
