--- a/config-data/company-microservice.properties
+++ b/config-data/company-microservice.properties
@@ -1,7 +1,7 @@
 server.port= 9093
 
 #Configuración base de datos
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/company_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/company_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=kruger
 spring.datasource.password=12345678
@@ -16,4 +16,4 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 #Eureka
-eureka.client.serviceUrl.defaultZone  = http://host.docker.internal:8081/eureka/
+eureka.client.serviceUrl.defaultZone  = http://localhost:8081/eureka/
