--- a/config-data/order-microservice.properties
+++ b/config-data/order-microservice.properties
@@ -1,7 +1,7 @@
 server.port=9091
 
 #Configuración base de datos
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/order_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/order_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=kruger
 spring.datasource.password=12345678
@@ -17,7 +17,7 @@ server.error.include-binding-errors=always
 
 #Descomentar cuando este listo eureka
 #Eureka
-eureka.client.serviceUrl.defaultZone  = http://host.docker.internal:8081/eureka/
+eureka.client.serviceUrl.defaultZone  = http://localhost:8081/eureka/
 
 #Zipkin
 # spring.application.zipkin: http://localhost:9411
