Try host.docker.internal

--- a/config-data/product-microservice.properties
+++ b/config-data/product-microservice.properties
@@ -1,7 +1,7 @@
 server.port= 9090
 
 #Configuración base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/product_db
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=kruger
 spring.datasource.password=12345678
