Try host.docker.internal

--- a/config-data/product-microservice.properties
+++ b/config-data/product-microservice.properties
@@ -16,7 +16,7 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 #Eureka
-eureka.client.serviceUrl.defaultZone  = http://localhost:8081/eureka/
+eureka.client.serviceUrl.defaultZone  = http://host.docker.internal:8081/eureka/
 
 #Zipkin
 # spring.application.zipkin: http://localhost:9411
