--- a/config-data/registry-microservice.yml
+++ b/config-data/registry-microservice.yml
@@ -4,6 +4,7 @@ server:
 eureka:
   instance:
     hostname: host.docker.internal
+    prefer-ip-address: true
   client:
     registerWithEureka: false
     fetchRegistry: false
