Try eureka errore

--- a/config-data/product-microservice.properties
+++ b/config-data/product-microservice.properties
@@ -17,6 +17,7 @@ server.error.include-binding-errors=always
 
 #Eureka
 eureka.client.serviceUrl.defaultZone  = http://host.docker.internal:8081/eureka/
+eureka.instance.prefer-ip-address=true
 
 #Zipkin
 # spring.application.zipkin: http://localhost:9411
