--- a/config-data/product-microservice.properties
+++ b/config-data/product-microservice.properties
@@ -17,8 +17,8 @@ server.error.include-binding-errors=always
 
 #Eureka
 eureka.client.serviceUrl.defaultZone  = http://host.docker.internal:8081/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+# eureka.client.register-with-eureka=true
+# eureka.client.fetch-registry=true
 
 #Zipkin
 # spring.application.zipkin: http://localhost:9411
