--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -11,7 +11,7 @@ spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping: true
 
 #product-microservice
 spring.cloud.gateway.routes[0].id=product-product-microservice
-spring.cloud.gateway.routes[0].uri=lb://product-microservice
+spring.cloud.gateway.routes[0].uri=http://localhost:9090/api/products/
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**
 
 spring.cloud.gateway.routes[1].id=category-product-microservice
