--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -15,30 +15,30 @@ spring.cloud.gateway.routes[0].uri=http://localhost:9090/api/products/
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**
 
 spring.cloud.gateway.routes[1].id=category-product-microservice
-spring.cloud.gateway.routes[1].uri=lb://product-microservice
+spring.cloud.gateway.routes[1].uri=http://localhost:9090/api/categories/
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/categories/**
 
 spring.cloud.gateway.routes[2].id=review-product-microservice
-spring.cloud.gateway.routes[2].uri=lb://product-microservice
+spring.cloud.gateway.routes[2].uri=http://localhost:9090/api/reviews/
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/reviews/**
 
 spring.cloud.gateway.routes[3].id=image-product-microservice
-spring.cloud.gateway.routes[3].uri=lb://product-microservice
+spring.cloud.gateway.routes[3].uri=http://localhost:9090/api/images/
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/images/**
 
 #order-microservice
 spring.cloud.gateway.routes[4].id=order-order-microservice
-spring.cloud.gateway.routes[4].uri=lb://order-microservice
+spring.cloud.gateway.routes[4].uri=http://localhost:9091/api/orders/
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/orders/**
 spring.cloud.gateway.routes[4].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[5].id=payment-order-microservice
-spring.cloud.gateway.routes[5].uri=lb://order-microservice
+spring.cloud.gateway.routes[5].uri=http://localhost:9091/api/payments/
 spring.cloud.gateway.routes[5].predicates[0]=Path=/api/payments/**
 spring.cloud.gateway.routes[5].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[6].id=coupon-order-microservice
-spring.cloud.gateway.routes[6].uri=lb://order-microservice
+spring.cloud.gateway.routes[6].uri=http://localhost:9091/api/coupons/
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api/coupons/**
 spring.cloud.gateway.routes[6].filters[0]=AuthFilter
 
@@ -52,26 +52,26 @@ spring.cloud.gateway.routes[7].predicates[0]=Path=/api/carts/{num}/report, Where
 spring.cloud.gateway.routes[7].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[8].id=cart-auth-microservice
-spring.cloud.gateway.routes[8].uri=lb://auth-microservice
+spring.cloud.gateway.routes[8].uri=http://localhost:9092/api/carts/
 spring.cloud.gateway.routes[8].predicates[0]=Path=/api/carts/**
 spring.cloud.gateway.routes[8].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[9].id=user-auth-microservice
-spring.cloud.gateway.routes[9].uri=lb://auth-microservice
+spring.cloud.gateway.routes[9].uri=http://localhost:9092/api/users/
 spring.cloud.gateway.routes[9].predicates[0]=Path=/api/users/**
 
 spring.cloud.gateway.routes[10].id=address-auth-microservice
-spring.cloud.gateway.routes[10].uri=lb://auth-microservice
+spring.cloud.gateway.routes[10].uri=http://localhost:9092/api/address/
 spring.cloud.gateway.routes[10].predicates[0]=Path=/api/address/**
 spring.cloud.gateway.routes[10].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[11].id=mail-auth-microservice
-spring.cloud.gateway.routes[11].uri=lb://auth-microservice
+spring.cloud.gateway.routes[11].uri=http://localhost:9092/api/mails/
 spring.cloud.gateway.routes[11].predicates[0]=Path=/api/mails/**
 
 #company-microservice
 spring.cloud.gateway.routes[12].id=company-microservice
-spring.cloud.gateway.routes[12].uri=lb://company-microservice
+spring.cloud.gateway.routes[12].uri=http://localhost:9092/api/companies/
 spring.cloud.gateway.routes[12].predicates[0]=Path=/api/companies/**
 spring.cloud.gateway.routes[12].filters[0]=AuthFilter
 
