--- a/config-data/registry-microservice.yml
+++ b/config-data/registry-microservice.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: registry-microservice
     prefer-ip-address: true
   client:
     registerWithEureka: false
