--- a/order-microservice/src/main/resources/bootstrap.yml
+++ b/order-microservice/src/main/resources/bootstrap.yml
@@ -3,6 +3,6 @@ spring:
         name: order-microservice
     cloud:
         config:
-            uri: http://host.docker.internal:8080
+            uri: http://config-microservice:8080
             username: root
             password: s3cr3t
