--- a/company-microservice/src/main/resources/bootstrap.yml
+++ b/company-microservice/src/main/resources/bootstrap.yml
@@ -3,6 +3,6 @@ spring:
         name: company-microservice
     cloud:
         config:
-            uri: http://localhost:8080
+            uri: http://config-microservice:8080
             username: root
             password: s3cr3t
