--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -46,34 +46,34 @@ spring.cloud.gateway.routes[6].filters[0]=AuthFilter
 #user-microservice
 
 #EXCLUSIVO PARA LA DESCARGA DEL PDF SIN BALANCEADOR DE CARGA
-spring.cloud.gateway.routes[7].id=cart-pdf-auth-microservice
+# spring.cloud.gateway.routes[7].id=cart-pdf-auth-microservice
+# spring.cloud.gateway.routes[7].uri=http://auth-microservice:9092/api/carts/
+# spring.cloud.gateway.routes[7].predicates[0]=Path=/api/carts/{num}/report, Where(num=\d+)
+# spring.cloud.gateway.routes[7].filters[0]=AuthFilter
+
+spring.cloud.gateway.routes[7].id=cart-auth-microservice
 spring.cloud.gateway.routes[7].uri=http://auth-microservice:9092/api/carts/
-spring.cloud.gateway.routes[7].predicates[0]=Path=/api/carts/{num}/report, Where(num=\d+)
+spring.cloud.gateway.routes[7].predicates[0]=Path=/api/carts/**
 spring.cloud.gateway.routes[7].filters[0]=AuthFilter
 
-spring.cloud.gateway.routes[8].id=cart-auth-microservice
-spring.cloud.gateway.routes[8].uri=http://auth-microservice:9092/api/carts/
-spring.cloud.gateway.routes[8].predicates[0]=Path=/api/carts/**
-spring.cloud.gateway.routes[8].filters[0]=AuthFilter
+spring.cloud.gateway.routes[8].id=user-auth-microservice
+spring.cloud.gateway.routes[8].uri=http://auth-microservice:9092/api/users/
+spring.cloud.gateway.routes[8].predicates[0]=Path=/api/users/**
 
-spring.cloud.gateway.routes[9].id=user-auth-microservice
-spring.cloud.gateway.routes[9].uri=http://auth-microservice:9092/api/users/
-spring.cloud.gateway.routes[9].predicates[0]=Path=/api/users/**
+spring.cloud.gateway.routes[9].id=address-auth-microservice
+spring.cloud.gateway.routes[9].uri=http://auth-microservice:9092/api/address/
+spring.cloud.gateway.routes[9].predicates[0]=Path=/api/address/**
+spring.cloud.gateway.routes[9].filters[0]=AuthFilter
 
-spring.cloud.gateway.routes[10].id=address-auth-microservice
-spring.cloud.gateway.routes[10].uri=http://auth-microservice:9092/api/address/
-spring.cloud.gateway.routes[10].predicates[0]=Path=/api/address/**
-spring.cloud.gateway.routes[10].filters[0]=AuthFilter
-
-spring.cloud.gateway.routes[11].id=mail-auth-microservice
-spring.cloud.gateway.routes[11].uri=http://auth-microservice:9092/api/mails/
-spring.cloud.gateway.routes[11].predicates[0]=Path=/api/mails/**
+spring.cloud.gateway.routes[10].id=mail-auth-microservice
+spring.cloud.gateway.routes[10].uri=http://auth-microservice:9092/api/mails/
+spring.cloud.gateway.routes[10].predicates[0]=Path=/api/mails/**
 
 #company-microservice
-spring.cloud.gateway.routes[12].id=company-microservice
-spring.cloud.gateway.routes[12].uri=http://company-microservice:9093/api/companies/
-spring.cloud.gateway.routes[12].predicates[0]=Path=/api/companies/**
-spring.cloud.gateway.routes[12].filters[0]=AuthFilter
+spring.cloud.gateway.routes[11].id=company-microservice
+spring.cloud.gateway.routes[11].uri=http://company-microservice:9093/api/companies/
+spring.cloud.gateway.routes[11].predicates[0]=Path=/api/companies/**
+spring.cloud.gateway.routes[11].filters[0]=AuthFilter
 
 
 
