--- a/auth-microservice/Dockerfile
+++ b/auth-microservice/Dockerfile
@@ -1,5 +1,12 @@
 # Uso del jdk 17 
-FROM openjdk:17-alpine
+# FROM openjdk:17-alpine
+FROM ubuntu:20.04
+
+#Instalación de JDK17
+RUN apt-get update && apt-get install -y openjdk-17-jdk
+
+# Instalación de la biblioteca libfreetype
+RUN apt-get update && apt-get install -y libfreetype6
 
 # Directorio dentro del contenedor donde se copiara
 WORKDIR /app
