--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -1,5 +1,7 @@
 server.port=8082
 
+server.address=0.0.0.0
+
 #Eureka
 eureka.client.serviceUrl.defaultZone  = http://registry-microservice:8081/eureka/
 
@@ -76,9 +78,8 @@ spring.cloud.gateway.routes[11].predicates[0]=Path=/api/companies/**
 spring.cloud.gateway.routes[11].filters[0]=AuthFilter
 
 
-
 #swagger
-# #product
+#product
 spring.cloud.gateway.routes[12].id=product-microservice-swagger
 spring.cloud.gateway.routes[12].uri=http://product-microservice:9090/swagger-ui/index.html#/
 spring.cloud.gateway.routes[12].predicates[0]=Path=/product/swagger-ui/index.html#/**
