--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -49,12 +49,12 @@ spring.cloud.gateway.routes[6].filters[0]=AuthFilter
 spring.cloud.gateway.routes[7].id=cart-pdf-auth-microservice
 spring.cloud.gateway.routes[7].uri=http://localhost:9092/api/carts/
 spring.cloud.gateway.routes[7].predicates[0]=Path=/api/carts/{num}/report, Where(num=\d+)
-spring.cloud.gateway.routes[7].filters[0]=AuthFilter
+#spring.cloud.gateway.routes[7].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[8].id=cart-auth-microservice
 spring.cloud.gateway.routes[8].uri=lb://auth-microservice
 spring.cloud.gateway.routes[8].predicates[0]=Path=/api/carts/**
-spring.cloud.gateway.routes[8].filters[0]=AuthFilter
+#spring.cloud.gateway.routes[8].filters[0]=AuthFilter
 
 spring.cloud.gateway.routes[9].id=user-auth-microservice
 spring.cloud.gateway.routes[9].uri=lb://auth-microservice
