--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -77,7 +77,7 @@ spring.cloud.gateway.routes[11].filters[0]=AuthFilter
 #product
 spring.cloud.gateway.routes[12].id=product-microservice-swagger
 spring.cloud.gateway.routes[12].uri=http://product-microservice:9090/swagger-ui/index.html#/
-spring.cloud.gateway.routes[12].predicates[0]=Path=/product/swagger-ui/index.html#/**
+spring.cloud.gateway.routes[12].predicates[0]=Path=/product/swagger-ui/**
 
 # #order
 # spring.cloud.gateway.routes[13].id=order-microservice-swagger
