--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -76,7 +76,7 @@ spring.cloud.gateway.routes[11].filters[0]=AuthFilter
 #swagger
 #product
 spring.cloud.gateway.routes[12].id=product-microservice-swagger
-spring.cloud.gateway.routes[12].uri=http://product-microservice:9090/swagger-ui/index.html#/
+spring.cloud.gateway.routes[12].uri=http://product-microservice:9090/swagger-ui/
 spring.cloud.gateway.routes[12].predicates[0]=Path=/swagger-ui/**,/swagger-resources/**,/swagger-ui.html,/v2/api-docs,/webjars/**,/view/**
 
 # #order
