No mismo swagger

--- a/config-data/gateway-microservice.properties
+++ b/config-data/gateway-microservice.properties
@@ -75,9 +75,9 @@ spring.cloud.gateway.routes[11].filters[0]=AuthFilter
 
 #swagger
 #product
-spring.cloud.gateway.routes[12].id=product-microservice-swagger
-spring.cloud.gateway.routes[12].uri=http://product-microservice:9090/
-spring.cloud.gateway.routes[12].predicates[0]=Path=/swagger-ui/**,/swagger-resources/**,/swagger-ui.html,/v2/api-docs,/webjars/**,/view/**
+# spring.cloud.gateway.routes[12].id=product-microservice-swagger
+# spring.cloud.gateway.routes[12].uri=http://product-microservice:9090/
+# spring.cloud.gateway.routes[12].predicates[0]=Path=/swagger-ui/**,/swagger-resources/**,/swagger-ui.html,/v2/api-docs,/webjars/**,/view/**
 
 # #order
 # spring.cloud.gateway.routes[13].id=order-microservice-swagger
