--- a/gateway-microservice/src/main/resources/bootstrap.yml
+++ b/gateway-microservice/src/main/resources/bootstrap.yml
@@ -1,3 +1,9 @@
+server:
+  ssl:
+    key-alias: https-example
+    key-store-type: JKS
+    key-password: vengacoders
+    key-store: classpath:https-example.jks
 spring:
   application:
     name: gateway-microservice
